--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,13 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(Qt5Core_DIR /usr/local/Cellar/qt/5.15.2/lib/cmake/Qt5Core)
+set(Qt5Widgets_DIR /usr/local/Cellar/qt/5.15.2/lib/cmake/Qt5Widgets)
+set(Qt5Concurrent_DIR /usr/local/Cellar/qt/5.15.2/lib/cmake/Qt5Concurrent)
+set(Qt5Network_DIR /usr/local/Cellar/qt/5.15.2/lib/cmake/Qt5Network)
+set(Qt5Xml_DIR /usr/local/Cellar/qt/5.15.2/lib/cmake/Qt5Xml)
+set(Qt5Test_DIR /usr/local/Cellar/qt/5.15.2/lib/cmake/Qt5Test)
+
 find_package(Qt5Core REQUIRED)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Concurrent REQUIRED)
@@ -65,7 +72,7 @@ endmacro()
 # warnings and optimization
 if(NOT MSVC)
     ucm_add_flags(-O2 -g -ffast-math)
-    ucm_add_flags(-Werror -Wall -Wextra)
+    ucm_add_flags(-Werror -Wall -Wextra -Wno-deprecated)
     ucm_add_flags(-Wnarrowing -Wshadow)
     ucm_add_flags(CXX -Wnon-virtual-dtor)
     remove_release_flag("-O3")
